[chore: 0.0.0] .|. Update chart, add two charts

--- a/frontend/src/main/resource/css/global-twcss.css
+++ b/frontend/src/main/resource/css/global-twcss.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .text-outline {
+        /* @apply text-lime-500; */
+        text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+    }
+
+    .text-outline-2 {
+        /* @apply text-lime-500; */
+        text-shadow: -2px -2px 0 black, 2px -2px 0 black, -2px 2px 0 black, 2px 2px 0 black;
+    }
+
+
+    .text-outline-4 {
+        /* @apply text-lime-500; */
+        text-shadow: -4px -4px 0 black, 4px -4px 0 black, -4px 4px 0 black, 4px 4px 0 black;
+    }
+}
